# RobotChallenge

./: .gitignore  Dockerfile  README.md  ReadMe.md  __main__.py  conf.py  gui.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: actions.yml  slack.yml
docs/source/: conf.py  index.rst
robotchallenge/: __init__.py  __main__.py  cli.py  constants.py
robotchallenge/Board/: board.py
robotchallenge/Commands/: command.py  utlities.py
robotchallenge/Compiler/: compiler.py
robotchallenge/Direction/: direction.py
robotchallenge/Robot/: robot.py
robotchallenge/Simulator/: simulator.py  utilities.py
scripts/: dev.txt
src/Board/: board.py
src/Compiler/: compiler.py
src/Direction/: direction.py
src/Robot/: robot.py
src/Simulator/: simulator.py
tests/: conftest.py  test_board.py  test_commands.py  test_compiler.py  test_direction.py  test_main.py  test_optimization.py  test_robot.py  test_simulator.py  test_system.py  tests_constants.py
tests/test_data/: sample_problems.txt
