[metadata]
name = RobotChallenge
version = 1.0.1
author = Sheece Gardezi
author_email = sheecegardezi@gmail.com
description = An Attempt At Robot Challenge
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sheecegardezi/RobotChallenge
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7